# DeepTutor_Seu_ai_for_class

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_codex.md  CLAUDE_phase5.md  CLAUDE_write.md  PLAN.md  README.md  plan_knowledge_organization.md
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_1_localization/: CMakeLists.txt  package.xml
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_1_localization/config/: amcl_params.yaml  ekf_params.yaml  sensor_sync_params.yaml
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_1_localization/include/module_1_localization/: amcl_likelihood_field.hpp  localization_lifecycle.hpp  sensor_synchronizer.hpp  tf_aligner.hpp
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_1_localization/launch/: localization.launch.py
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_1_localization/src/: amcl_likelihood_field.cpp  data_preprocessor.cpp  diagnostic_monitor.cpp  localization_lifecycle.cpp  pose_estimator.cpp  sensor_synchronizer.cpp  tf_aligner.cpp
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_1_localization/test/: test_sensor_sync.cpp  test_tf_aligner.cpp
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_2_planning/: CMakeLists.txt  dwb_predictor_plugin.xml  hybrid_astar_planner_plugin.xml  package.xml
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_2_planning/config/: dwb_params.yaml  hybrid_astar_params.yaml
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_2_planning/include/module_2_planning/: dwb_predictor_plugin.hpp  dynamic_obstacle_predictor.hpp  hybrid_astar_planner.hpp  path_searcher.hpp  trajectory_optimizer.hpp  velocity_clipper.hpp
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_2_planning/launch/: planning.launch.py
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_2_planning/src/: dwb_predictor_plugin.cpp  dynamic_obstacle_predictor.cpp  hybrid_astar_planner.cpp  path_searcher.cpp  trajectory_optimizer.cpp  velocity_clipper.cpp
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_2_planning/test/: test_hybrid_astar.cpp
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_3_mapping/: CMakeLists.txt  package.xml
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_3_mapping/config/: frontier_params.yaml
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_3_mapping/include/module_3_mapping/: frontier_explorer.hpp  map_metadata_store.hpp  semantic_annotator.hpp  semantic_map_merger.hpp
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_3_mapping/launch/: exploration.launch.py  semantic_mapping.launch.py
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_3_mapping/scripts/: map_metadata_store.py  semantic_annotator.py  slam_toolbox_bridge.py
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_3_mapping/src/: frontier_explorer.cpp  semantic_map_merger.cpp
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_4_obstacle/: CMakeLists.txt  package.xml
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_4_obstacle/config/: cluster_params.yaml  ekf_params.yaml  teb_nonlinear_params.yaml
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_4_obstacle/include/module_4_obstacle/: euclidean_cluster.hpp  obstacle_ekf.hpp  obstacle_layer_ext.hpp  teb_nonlinear_plugin.hpp
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_4_obstacle/launch/: obstacle_avoidance.launch.py
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_4_obstacle/src/: euclidean_cluster.cpp  obstacle_ekf.cpp  obstacle_kf_tracker.cpp  obstacle_layer_ext.cpp  pointcloud_processor.cpp  safety_guardian.cpp  teb_nonlinear_plugin.cpp
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_4_obstacle/test/: test_collision_cone.cpp  test_ekf_tracking.cpp
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_5_multi_robot/: CMakeLists.txt  package.xml
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_5_multi_robot/include/module_5_multi_robot/: cbba_allocator.hpp  conflict_resolver.hpp  cross_robot_tf.hpp  fleet_executor.hpp  rstc_preplanner.hpp
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_5_multi_robot/scripts/: task_logger.py
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_5_multi_robot/src/: cbba_allocator.cpp  conflict_resolver.cpp  cross_robot_tf.cpp  fleet_executor.cpp  rstc_preplanner.cpp
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_6_testing/: CMakeLists.txt  package.xml
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_6_testing/include/module_6_testing/: report_generator.hpp  rt_stress_tester.hpp  safety_boundary_checker.hpp  scenario_runner.hpp
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_6_testing/scripts/: perf_analyzer.py  report_generator.py
data/user/projects/proj_1774269250630_91d853/repo/ros_nav_internship/src/module_6_testing/src/: rt_stress_tester.cpp  safety_boundary_checker.cpp  scenario_runner.cpp
src/agents/project/: coordinator.py  markdown_to_docx.py  reference.docx  reflection_manager.py  session_manager.py
src/knowledge/: chapter_graph.py
tests/: e2e_project_test.py  test_code_generator.py  test_syllabus_mode.py
tests/core/: test_add_documents_embedding_bridge.py
web/app/: page.tsx
web/components/: Sidebar.tsx
web/context/: GlobalContext.tsx
web/types/: sidebar.ts
(+54 files in other folders)
