<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>module_4_obstacle</name>
  <version>0.1.0</version>
  <description>
    Module 4: Obstacle detection, EKF tracking, costmap extension, TEB constraints,
    and safety monitoring for ROS2 Humble navigation internship.
  </description>
  <maintainer email="intern@example.com">ROS2 Nav Intern</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_gtest</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>diagnostic_updater</depend>
  <depend>eigen3_cmake_module</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Costmap plugin registration -->
    <nav2_costmap_2d plugin="${prefix}/obstacle_layer_ext_plugin.xml"/>
  </export>
</package>
